multi-az-vpc/subnet.template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >
    Template for a stack of VPC subnet

Parameters:
  ResourceNamePrefix:
    Description: Prefix of resource name
    Type: String
  VpcId:
    Description: VPC ID
    Type: AWS::EC2::VPC::Id
  InternetGatewayId:
    Description: Internet Gateway ID
    Type: String
  AvailabilityZone:
    Description: Availability Zone
    Type: AWS::EC2::AvailabilityZone::Name
  AvailabilityZoneId:
    Description: Availability Zone ID
    Type: String
  PublicSubnetCidrBlock:
    Description: CIDR block of public subnet
    Type: String
    AllowedPattern: '(\d|[01]?\d\d|2[0-4]\d|25[0-5])\.(\d|[01]?\d\d|2[0-4]\d|25[0-5])\.(\d|[01]?\d\d|2[0-4]\d|25[0-5])\.(\d|[01]?\d\d|2[0-4]\d|25[0-5])/([12]?\d|3[0-2])'
  PrivateSubnetCidrBlock:
    Description: CIDR block of private subnet
    Type: String
    AllowedPattern: '(\d|[01]?\d\d|2[0-4]\d|25[0-5])\.(\d|[01]?\d\d|2[0-4]\d|25[0-5])\.(\d|[01]?\d\d|2[0-4]\d|25[0-5])\.(\d|[01]?\d\d|2[0-4]\d|25[0-5])/([12]?\d|3[0-2])'

Resources:
  Eip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PublicSubnetCidrBlock
      AvailabilityZone: !Ref AvailabilityZone
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${ResourceNamePrefix}-public-${AvailabilityZoneId}

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PrivateSubnetCidrBlock
      AvailabilityZone: !Ref AvailabilityZone
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${ResourceNamePrefix}-private-${AvailabilityZoneId}

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt Eip.AllocationId
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: !Sub ${ResourceNamePrefix}-${AvailabilityZoneId}

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${ResourceNamePrefix}-public-${AvailabilityZoneId}

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${ResourceNamePrefix}-private-${AvailabilityZoneId}

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref PublicRouteTable
      GatewayId: !Ref InternetGatewayId

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref PrivateRouteTable
      NatGatewayId: !Ref NatGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

Outputs:
  PublicSubnetId:
    Description: Public subnet ID
    Value: !Ref PublicSubnet
  PrivateSubnetId:
    Description: Private subnet ID
    Value: !Ref PrivateSubnet
